orion/orion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orion
  template:
    metadata:
      labels:
        app: orion
    spec:
      containers:
      - name: orion
        image: fiware/orion:1.12.0
        ports:
        - containerPort: 1026
        args: ["-dbhost", "localhost"]
      - name: orion-mongodb
        image: mongo:3.4
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: orion
  namespace: default
spec:
  selector:
    app: orion
  type: NodePort
  ports:
  - port: 1026
    protocol: TCP
    targetPort: 1026
    nodePort: 30000
